--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
+    "downlevelIteration": true,
     "noEmit": true,
     "incremental": true,
     "esModuleInterop": true,
